--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           </aside>
           </section>     
           <section>
-            <img data-src="./images/Example01.png" alt="Example 1">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/Example01.png" alt="Example 1">
           </section>
       </section>
 
@@ -388,7 +388,7 @@
           </section>
 
           <section>
-            <img data-src="./images/SSCvsSeparability.jpg" alt="" width="600" height="400">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/SSCvsSeparability.jpg" alt="" width="600" height="400">
           </section>
 
           <section id="t4">
@@ -504,7 +504,7 @@
             </ul>
           </section>
           <section>
-            <img data-src="./images/Remark02.png" alt="">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/Remark02.png" alt="">
           </section>
 
           <section id="mf">
@@ -615,7 +615,7 @@
             </aside>
           </section>
           <section>
-            <img data-src="./images/Example03.png" alt="">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/Example03.png" alt="">
           </section>
 
           <section id="c1">
@@ -676,7 +676,7 @@
             </aside>
           </section>
           <section>
-            <img data-src="./images/Example04.png" alt="">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/Example04.png" alt="">
           </section>
           
           <section id="t8">
@@ -755,7 +755,7 @@
               <h5>
                 Algotithm
               </h5>
-              <img data-src="./images/Algorithm.png" alt="Algorithm" height="600rem" width="600rem">
+              <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/Algorithm.png" alt="Algorithm" height="600rem" width="600rem">
             </section>
 
 
@@ -789,7 +789,7 @@
                 https://github.com/samyarmodabber/TUC_Seminar_NMF
               </a>
             </p>
-            <img data-src="./images/QR_NMFTUCSeminar.png" alt="" width="300rem" height="300rem">
+            <img data-src="https://raw.githubusercontent.com/samyarmodabber/TUC_Seminar_NMF/main/images/QR_NMFTUCSeminar.png" alt="" width="300rem" height="300rem">
           </section>
         </section>
           
