--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </section>
 
           <section>
-            <img src="/images/LDR.png" alt="LDR">
+            <img data-src="https://mdbr.s3.eu-central-1.amazonaws.com/TUC/Seminar_NMF/LDR.png" alt="LDR">
           </section>
 
           <section id="lr">
@@ -408,7 +408,8 @@
               $R\ \overset{\ Exact}{\mathop{=}}\,{{C}_{*}}S_{*}^{T}$ and ${{C}_{*}}\left( :,k \right)$is identifiable, then
             </p>
             <p>
-              $\ \forall j\ \ j\ne k\ \ \operatorname{supp}\left( {{C}_{*}}\left( :,j \right) \right)\not\subset \operatorname{supp}\left( {{C}_{*}}\left( :,k \right) \right)\ \ \ \ \ \ \ \ \ \left( resp.\ {{S}_{*}} \right)$
+              $$\ \forall j\ \ j\ne k\ \ \operatorname{supp}\left( {{C}_{*}}\left( :,j \right) \right)\not\subset \operatorname{supp}\left( {{C}_{*}}\left( :,k \right) \right)$$ 
+              <br>$ \left( resp.\ {{S}_{*}} \right)$
             </p>
 
           </section>
@@ -778,7 +779,7 @@
               </li>
 
             </ul>
-            <img src="/images/Book_NMF_cover.png" alt="" width="30%" height="30%">
+            <img data-src="https://mdbr.s3.eu-central-1.amazonaws.com/TUC/Seminar_NMF/Book_NMF_cover.png" alt="" width="30%" height="30%">
           </section>
 
           <section id="">
